Fixes z-index of filter bar

--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -5,6 +5,8 @@
   padding: 15px 10px;
   background-color: $off-blue;
   border-bottom: 1px solid $gray5;
+  z-index: 9999;
+
   .checkbox { display: inline; }
 
   .checkbox + .checkbox, input + .checkbox { margin-left: 15px; }
